--- a/sistema de registro de docentes/packages.config
+++ b/sistema de registro de docentes/packages.config
@@ -1,18 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Bunifu.Licensing" version="6.0.2" targetFramework="net472" />
-  <package id="Bunifu.UI.WinForms" version="7.0.0" targetFramework="net472" />
-  <package id="ClosedXML" version="0.102.2" targetFramework="net48" />
+  <package id="ClosedXML" version="0.102.2" targetFramework="net471" />
+  <package id="ClosedXML_Excel" version="1.0.0" targetFramework="net471" />
   <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net48" />
-  <package id="EPPlus" version="7.1.2" targetFramework="net48" />
+  <package id="EPPlus.Core" version="1.5.4" targetFramework="net471" />
   <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net48" />
   <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net48" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net471" />
   <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net471" />
   <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net48" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net471" />
   <package id="Irony.NetCore" version="1.0.11" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration" version="8.0.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="8.0.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="8.0.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="8.0.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="8.0.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="8.0.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net471" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.0" targetFramework="net48" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="RestSharp" version="110.2.0" targetFramework="net472" />
   <package id="SixLabors.Fonts" version="1.0.0" targetFramework="net48" />
@@ -29,11 +39,12 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Pkcs" version="8.0.0" targetFramework="net471" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encoding.CodePages" version="8.0.0" targetFramework="net471" />
-  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net472" />
-  <package id="System.Text.Json" version="7.0.2" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net471" />
+  <package id="System.Text.Json" version="8.0.0" targetFramework="net471" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
