--- a/sistema de registro de docentes/packages.config
+++ b/sistema de registro de docentes/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bunifu.Licensing" version="6.0.2" targetFramework="net472" />
+  <package id="Bunifu.Licensing" version="6.0.2" targetFramework="net472" requireReinstallation="true" />
   <package id="ClosedXML" version="0.102.2" targetFramework="net471" />
   <package id="ClosedXML_Excel" version="1.0.0" targetFramework="net471" />
   <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net48" />
@@ -25,12 +25,12 @@
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="RestSharp" version="110.2.0" targetFramework="net472" />
-  <package id="SixLabors.Fonts" version="1.0.0" targetFramework="net48" />
+  <package id="SixLabors.Fonts" version="1.0.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.CodeDom" version="8.0.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
-  <package id="System.IO.Packaging" version="6.0.0" targetFramework="net48" />
+  <package id="System.IO.Packaging" version="8.0.0" targetFramework="net48" />
   <package id="System.Management" version="8.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
