--- a/sistema de registro de docentes/packages.config
+++ b/sistema de registro de docentes/packages.config
@@ -4,7 +4,7 @@
   <package id="ClosedXML" version="0.102.2" targetFramework="net471" />
   <package id="ClosedXML_Excel" version="1.0.0" targetFramework="net471" />
   <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net48" />
-  <package id="EPPlus.Core" version="1.5.4" targetFramework="net471" />
+  <package id="EPPlus" version="7.1.2" targetFramework="net48" />
   <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net48" />
   <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net48" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net471" />
